--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,22 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>it-ibm-stage</name>
   <description>Stage java</description>
+  
+  <dependencies>
+
+  </dependencies>  
+  
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
