--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,26 @@
   <dependencies>
 
   </dependencies>  
-  
+   <dependency>
+ 	<groupId>com.google.code.gson</groupId>
+ 	<artifactId>gson</artifactId>
+ 	<version>2.9.1</version>
+ </dependency>
+ 	
+ <!-- Dipendenza per JAXB API -->
+ <dependency>
+     <groupId>javax.xml.bind</groupId>
+     <artifactId>jaxb-api</artifactId>
+     <version>2.3.1</version>
+ </dependency>
+
+ <!-- Dipendenza per implementazione di JAXB -->
+ <dependency>
+     <groupId>org.glassfish.jaxb</groupId>
+     <artifactId>jaxb-runtime</artifactId>
+     <version>2.3.3</version>
+ </dependency>
+ 
   <build>
     <plugins>
         <plugin>
